mejoras en diseño y panel de administracion

--- a/Templates/admin.html
+++ b/Templates/admin.html
@@ -62,7 +62,7 @@
 =========================== -->
 <div class="container p-5 mt-3">
     <h2 class="text-center alert ">
-        Sistema de Gestión de Productos
+        Sistema de Gestión de cursos IA
     </h2>
 
     <div class="row">
@@ -97,7 +97,7 @@
                     <div class="row g-0">
                         <div class="col-md-8">
                             <div class="card-body text-white">
-                                <h5 class="card-title">Registrar Productos</h5>
+                                <h5 class="card-title">Agregar nuevos cursos</h5>
                                 {# Botón que puede redirigir a agregar productos #}
                                 <a href="{{ url_for('agregar_producto') }}" class="btn btn-outline-success">Ver Detalles</a>
                             </div>
@@ -119,7 +119,7 @@
                     <div class="row g-0">
                         <div class="col-md-8">
                             <div class="card-body text-white">
-                                <h5 class="card-title">Visualizar Productos</h5>
+                                <h5 class="card-title">Ver cursos disponibles </h5>
                                 {# Botón que redirige a la vista de productos #}
                                 <a href="{{ url_for('listar_productos_agregados') }}" class="btn btn-outline-success">Ver Detalles</a>
                             </div>
