--- a/Templates/base.html
+++ b/Templates/base.html
@@ -33,7 +33,7 @@
     <nav class="navbar navbar-expand-lg navbar-custom fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <i class="fas fa-robot me-2"></i>SmartIA
+                <i class="fas fa-robot me-2"></i>Smart_IA
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -46,7 +46,7 @@
                         <a class="nav-link active" aria-current="page" href="inicio">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="productos">Cursos</a>
+                        <a class="nav-link" href="cursos">Cursos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contactopost">Contacto</a>
@@ -101,7 +101,7 @@
                     <h5>Enlaces</h5>
                     <ul class="list-unstyled">
                         <li class="mb-2"><a href="inicio">Inicio</a></li>
-                        <li class="mb-2"><a href="productos">Cursos</a></li>
+                        <li class="mb-2"><a href="cursos">Cursos</a></li>
                         <li class="mb-2"><a href="about">Acerca de</a></li>
                         <li class="mb-2"><a href="contactopost">Contacto</a></li>
                     </ul>
