--- a/Templates/perfil.html
+++ b/Templates/perfil.html
@@ -590,7 +590,7 @@
           
           <div class="form-group">
             <label for="idUsuario">ID de Usuario:</label>
-            <input type="text" id="idUsuario" class="form-control" value="{{ usuario.id }}" disabled>
+            <input type="text" id="idUsuario" class="form-control" value="{{ usuario.user_index }}" disabled>
           </div>
         </div>
 
