--- a/Templates/editar_curso_perfil.html
+++ b/Templates/editar_curso_perfil.html
@@ -35,7 +35,7 @@
 
 <style>
 .card-form {
-    background-color: #fff;
+    background-color: #000000;
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     overflow: hidden;
